--- a/src/Scrum/Views/Shared/_Layout.cshtml
+++ b/src/Scrum/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 $.ajax({
                     type: 'GET',
                     dataType: 'html',
-                    url: '@Url.Action("Register", "Account")',
+                    url: '@Url.Action("Register")',
                     success: function (result) {
                         $('#accessForm').html(result);
                     }
@@ -56,9 +56,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Account" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Projects" asp-action="Index">Projects</a></li>
+                    <li><a asp-area="" asp-controller="Extra" asp-action="Extra">Extra</a></li>
                 </ul>
             </div>
         </div>
