add update class and begin crud for projects

--- a/src/Scrum/Views/Account/Register.cshtml
+++ b/src/Scrum/Views/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Scrum.ViewModels
 @model RegisterViewModel
 
-<h2>Register a new user</h2>
+<h2>New Team Member</h2>
 <hr />
 @using (Html.BeginForm("Register", "Account", FormMethod.Post))
 {
