add user story functionality to project

--- a/src/Scrum/Views/Shared/_Layout.cshtml
+++ b/src/Scrum/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Account" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Projects" asp-action="Index">Projects</a></li>
-                    <li><a asp-area="" asp-controller="Extra" asp-action="Extra">Extra</a></li>
+                    <li><a asp-area="" asp-controller="Tools" asp-action="Index">Toolbox</a></li>
                 </ul>
             </div>
         </div>
