--- a/src/Scrum/Views/Projects/Details.cshtml
+++ b/src/Scrum/Views/Projects/Details.cshtml
@@ -10,12 +10,17 @@
 <p>@Html.DisplayNameFor(model => model.Title): @Html.DisplayFor(model => model.Title)</p>
 <p>@Html.DisplayNameFor(model => model.Description) : @Html.DisplayFor(model => model.Description)</p>
 <p>@Html.ActionLink("Add an Update", "Create", "Updates", new { id = Model.ProjectId })</p>
+<p>@Html.ActionLink("Add a User Story", "Create", "UserStories", new { id = Model.ProjectId })</p>
 
 <h3>Project Updates/Comments:</h3>
 @foreach (var update in Model.Updates)
 {
     <p>@update.Note</p>
-
+}
+<h3>User Stories:</h3>
+@foreach (var story in Model.UserStories)
+{
+    <p>@story.Spec</p>
 }
 <h3>Add New Tool</h3>
 @using (Html.BeginForm())
