--- a/src/Scrum/Views/Shared/_Layout.cshtml
+++ b/src/Scrum/Views/Shared/_Layout.cshtml
@@ -54,6 +54,19 @@
                     }
                 });
             });
+            $('.addStory').click(function () {
+                clicked = $(this)[0].id;
+                clicked = parseInt(clicked);
+                $.ajax({
+                    type: 'GET',
+                    dataType: 'html',
+                    data: {id : clicked},
+                    url: '@Url.Action("Create","UserStories")',
+                    success: function (result) {
+                        $('#storyForm').html(result);
+                    }
+                });
+            });
         });
     </script>
     <div class="navbar navbar-inverse navbar-fixed-top">
