add updates type and drop down for update create functionality

--- a/src/Scrum/Views/Updates/Create.cshtml
+++ b/src/Scrum/Views/Updates/Create.cshtml
@@ -10,5 +10,7 @@
     @Html.LabelFor(model => model.Note)
     @Html.EditorFor(model => model.Note)
 
+    @Html.DropDownList("UpdateTypeId")
+
     <input type="submit" value="Add Update" />
 }
