--- a/src/Scrum/Views/Tasks/Details.cshtml
+++ b/src/Scrum/Views/Tasks/Details.cshtml
@@ -21,3 +21,4 @@
 <div id="editTask"></div>
 
 <p>@Html.ActionLink("Delete", "Delete", "Tasks", new { id = Model.TaskId })</p>
+<p>@Html.ActionLink("Assign", "Assign", "Tasks", new { id = Model.TaskId })</p>
