--- a/src/Scrum/wwwroot/css/Tools/index.css
+++ b/src/Scrum/wwwroot/css/Tools/index.css
@@ -1,15 +1,27 @@
 ﻿.tooltype-1 {
-  background-color: red; }
+  background-color: lightcoral; }
 
 .tooltype-2 {
-  background-color: blue; }
+  background-color: lightcyan; }
 
 .tooltype-3 {
-  background-color: green; }
+  background-color: lightgreen; }
 
 .tooltype-4 {
-  background-color: orange; }
+  background-color: lightsalmon; }
 
 .tooltype-5 {
-  background-color: purple; }
+  background-color: mediumpurple; }
+
+.tooltype-6 {
+  background-color: lightpink; }
+
+.tooltype-7 {
+  background-color: lightgoldenrodyellow; }
+
+.tooltype-8 {
+  background-color: lightblue; }
+
+.tooltype-9 {
+  background-color: lightslategray; }
 
