--- a/src/Scrum/Views/Projects/Details.cshtml
+++ b/src/Scrum/Views/Projects/Details.cshtml
@@ -17,6 +17,11 @@
 <p>@Html.ActionLink("Add an Update", "Create", "Updates", new { id = Model.ProjectId })</p>
 <p>@Html.ActionLink("Add a Team Member", "AddUser", new { id = Model.ProjectId })</p>
 
+<h3>Project Team Members</h3>
+@foreach (var member in @ViewBag.Team)
+{
+    <p>@member</p>
+}
 <h3>Project Updates/Comments:</h3>
 @foreach (var update in Model.Updates)
 {
