add styling to project details page

--- a/src/Scrum/Views/Projects/Details.cshtml
+++ b/src/Scrum/Views/Projects/Details.cshtml
@@ -3,11 +3,12 @@
 
 <html lang="en">
 <head>
-    <title>The HTML5 Herald</title>
+    <title>The HTML5 Herald</title>    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.28/css/uikit.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.28/js/uikit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.28/js/uikit-icons.min.js"></script>
+    <link href="~/css/Projects/Detail.css" rel="stylesheet" />
 </head>
 <body>
     <ul class="uk-breadcrumb">
@@ -15,92 +16,138 @@
         <li><a href="#" class="uk-text-large uk-text-bold">@Model.Title</a></li>
     </ul>
     <button class="uk-button uk-button-default" title="Hello World" uk-tooltip>Hover</button>
-    <h2>Project Details</h2>
+
+    <div uk-grid>
+        <div class="uk-width-1-2 projectInfo">
+            <div class="uk-card uk-card-default uk-card-body">
+                <h2>@Model.Title</h2>
+                <p>@Model.Description</p>
+                <p><button type="button" class="uk-button uk-button-primary"><i class="fa fa-plus" aria-hidden="true"></i> @Html.ActionLink("Task", "Create", "Tasks", new { id = Model.ProjectId })</button></p>
+
+            </div>
+        </div>
+        <div class="uk-width-1-2 teamInfo">
+            <div class="uk-card uk-card-default uk-card-body">
+                <h3>Project Team Members</h3>
+                @foreach (var member in @ViewBag.Team)
+                {
+                    <p><i class="fa fa-user" aria-hidden="true"></i> @member</p>
+                }
+                <p><button type="button" class="uk-button uk-button-primary"><i class="fa fa-plus" aria-hidden="true"></i> @Html.ActionLink("Team Member", "AddUser", new { id = Model.ProjectId})</button></p>
+            </div>
+        </div>
+        <div class="uk-width-1-2">
+            <div class="uk-card uk-card-default uk-card-body">
+                <ul class="uk-subnav uk-subnav-pill" uk-switcher="animation: uk-animation-slide-left-medium, uk-animation-slide-right-medium">
+                    <li><a href="#">Stream</a></li>
+                    <li><a href="#">User Stories</a></li>
+                    <li><a href="#">Tools</a></li>
+                </ul>
+
+                <ul class="uk-switcher uk-margin">
+                    <li>
+                        <h3>Project Updates/Comments</h3>
+                        <p><button type="button" class="uk-button uk-button-primary"><i class="fa fa-plus" aria-hidden="true"></i> @Html.ActionLink("Update", "Create", "Updates", new { id = Model.ProjectId })</button></p>
+                        @foreach (var update in Model.Updates)
+                        {
+                            <p>@update.Note</p>
+                            <p>@update.TimeStamp</p>
+                        }
+                    </li>
+                    <li>
+                        <h3>User Stories</h3>
+                        @foreach (var story in Model.UserStories)
+                        {
+                            <p>@story.Spec</p>
+                        }
+                        <button type="button" class="uk-button uk-button-primary addStory" id="@Model.ProjectId">Add User Story</button>
+                        <div id="storyForm"></div>
+                    </li>
+                    <li>
+                        <h3>Tools</h3>
+                        @foreach (var join in Model.ProjectTools)
+                        {
+                            <p>@join.Tool.Name</p>
+                        }
+                        <h3>Add New Tool</h3>
+                        @using (Html.BeginForm())
+                        {
+                            @Html.DropDownList("ToolId")
+                            <input type="submit" value="Add Tool" class="uk-button uk-button-primary"/>
+                        }
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="uk-width-1-2">
+            <div class="uk-card uk-card-default uk-card-body">
+                <h3>Sprints</h3>
+                <div class="progress">
+                    @foreach (var data in @ViewBag.SprintCollection)
+                    {
+                        @if (@data.Total >= 1 && @data.Total <= 10)
+                        {
+                            <div class="progress-bar progress-bar-primary" role="progressbar" style="width:@data.Total%; border:solid 1px black">
+                                @data.Name
+                            </div>
+                        }
+                        @if (@data.Total >= 11 && @data.Total <= 29)
+                        {
+                            <div class="progress-bar progress-bar-warning" role="progressbar" style="width:@data.Total%; border:solid 1px black">
+                                @data.Name
+                            </div>
+                        }
+                        @if (@data.Total >= 30 && @data.Total <= 49)
+                        {
+                            <div class="progress-bar progress-bar-info" role="progressbar" style="width:@data.Total%; border:solid 1px black">
+                                @data.Name
+                            </div>
+                        }
+                        @if (@data.Total >= 50 && @data.Total <= 100)
+                        {
+                            <div class="progress-bar progress-bar-success" role="progressbar" style="width:@data.Total%; border:solid 1px black">
+                                @data.Name
+                            </div>
+                        }
+                    }
+                </div>
+                <table class="uk-table uk-table-justify uk-table-divider">
+                    <thead>
+                        <tr>
+                            <th class="uk-width-small">Sprint</th>
+                            <th>Start</th>
+                            <th>End</th>
+                            <th>Jump</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var sprint in Model.Sprints)
+                        {
+                            <tr>
+                                <td>@sprint.Name</td>
+                                <td>@sprint.StartDate</td>
+                                <td>@sprint.EndDate</td>
+                                <td><button class="uk-button view" type="button">@Html.ActionLink("View", "Details", "Sprints", new { id = sprint.SprintId })</button></td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+                <button type="button" class="createSprint uk-button uk-button-primary" id="@Model.ProjectId"><i class="fa fa-plus" aria-hidden="true"></i> Sprint</button>
+                <div id="sprintForm"></div>
+            </div>
+        </div>
+    </div>
     <h2>Assigned to You @ViewBag.CurrentUser</h2>
     @foreach (var task in @ViewBag.Tasks)
     {
         <p>@task.Description</p>
     }
 
-    <p>@Html.DisplayNameFor(model => model.Title): @Html.DisplayFor(model => model.Title)</p>
-    <p>@Html.DisplayNameFor(model => model.Description) : @Html.DisplayFor(model => model.Description)</p>
-    <p>@Html.ActionLink("Add an Update", "Create", "Updates", new { id = Model.ProjectId })</p>
-    <p>@Html.ActionLink("Add a Task", "Create", "Tasks", new { id = Model.ProjectId })</p>
-    <p>@Html.ActionLink("Add a Team Member", "AddUser", new { id = Model.ProjectId })</p>
-
-    <h3>Project Team Members</h3>
-    @foreach (var member in @ViewBag.Team)
-    {
-        <p>@member</p>
-    }
-
-    <h3>Project Updates/Comments:</h3>
-    @foreach (var update in Model.Updates)
-    {
-        <p>@update.Note</p>
-        <p>@update.TimeStamp</p>
-    }
-
-    <h3>User Stories:</h3>
-    <button type="button" class="addStory" id="@Model.ProjectId">Add User Story</button>
-    <div id="storyForm"></div>
-    @foreach (var story in Model.UserStories)
-    {
-        <p>@story.Spec</p>
-    }
-
-    <h3>Add New Tool</h3>
-    @using (Html.BeginForm())
-    {
-        @Html.DropDownList("ToolId")
-        <input type="submit" value="AddTool" />
-    }
-
-    @foreach (var join in Model.ProjectTools)
-    {
-        <p>@join.Tool.Name</p>
-    }
-
-    <h3>Sprints:</h3>
-    @foreach (var sprint in Model.Sprints)
-    {
-        <p>@Html.ActionLink(@sprint.Name, "Details", "Sprints", new { id = sprint.SprintId }) | @sprint.StartDate | @sprint.EndDate</p>
-    }
-    <button type="button" class="createSprint" id="@Model.ProjectId">Create a Sprint</button>
-    <div id="sprintForm"></div>
 
 
     <p>@Html.ActionLink("Back to List", "Index")</p>
 
     <p>@ViewBag.SprintTotal</p>
-    <div class="progress">
-        @foreach (var data in @ViewBag.SprintCollection)
-        {
-            @if (@data.Total >= 1 && @data.Total <= 10)
-            {
-                <div class="progress-bar progress-bar-danger" role="progressbar" style="width:@data.Total%; border:solid 1px black">
-                    @data.Name
-                </div>
-            }
-            @if (@data.Total >= 11 && @data.Total <= 29)
-            {
-                <div class="progress-bar progress-bar-warning" role="progressbar" style="width:@data.Total%; border:solid 1px black">
-                    @data.Name
-                </div>
-            }
-            @if (@data.Total >= 30 && @data.Total <= 49)
-            {
-                <div class="progress-bar progress-bar-info" role="progressbar" style="width:@data.Total%; border:solid 1px black">
-                    @data.Name
-                </div>
-            }
-            @if (@data.Total >= 50 && @data.Total <= 100)
-            {
-                <div class="progress-bar progress-bar-success" role="progressbar" style="width:@data.Total%; border:solid 1px black">
-                    @data.Name
-                </div>
-            }
-        }
-    </div>
+
 </body>
 </html>
